localize time WIP

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,6 +194,8 @@ en:
   moments:
     showing related:                            "Showing related moments"
     return to:                                  "Return to"
+    time past:                                  "%{ago} ago"
+
     vod:
       title:                                    "Verse of the day"
     friendship:
