--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -634,6 +634,7 @@ en:
       view all plans:                           "View All Plans"
       reading:                                  "reading"
       readings:                                 "readings"
+      readings 5 or more:                       "readings"
     settings:                                   "Settings"
     privacy:
       visible to friends?:                      "Would you like your activity with this plan to be visible to your friends?"
